<resources>
    <string name="app_name">Bai3</string>
    <string name="title_login">Đăng nhập hệ thống</string>
    <string name="label_user">User:</string>
    <string name="label_password">Password:</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="text_remember">Lưu thông tin</string>
    <string name="button_login">Đăng nhập</string>
    <string name="msg_empty">Vui lòng nhập user và password</string>
    <string name="msg_success">Đăng nhập thành công</string>
</resources>